--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="row row-cols-1 row-cols-md-3" data-aos="fade-in">
             <div class="col mb-4 d-flex align-items-stretch">
               <div class="card text-light bg-dark">
-                <img src="./assets/Kast-homescreen.png" class="card-img-top" alt="Kast-homescreen">
+                <img src="./assets/kastHomescreen.png" class="card-img-top" alt="Kast-homescreen">
                 <div class="card-body">
                     <a href="https://lanejm.github.io/static.layout.assignment/" target="blank">
                   <h5 class="card-title">Static Layout Application
@@ -106,7 +106,7 @@
             </div>
             <div class="col mb-4 d-flex align-items-stretch">
               <div class="card text-light bg-dark" data-aos="fade-in">
-                <img src="./assets/Creature Assignment.png" class="card-img-top" alt="Snowman">
+                <img src="./assets/creatureAssignment.png" class="card-img-top" alt="Snowman">
                 <div class="card-body">
                     <a href="https://codepen.io/lanejm/pen/GRZojXr" target="blank">
                   <h5 class="card-title">CSS Creature 
@@ -118,7 +118,7 @@
             </div>
             <div class="col mb-4 d-flex align-items-stretch">
               <div class="card text-light bg-dark" data-aos="fade-in">
-                <img src="./assets/api-1.png" class="card-img-top" alt="API Project 1">
+                <img src="./assets/api1.png" class="card-img-top" alt="API Project 1">
                 <div class="card-body">
                     <a href="https://lanejm.github.io/api1-project/" target="blank">
                   <h5 class="card-title">COVID-19 Cases API  
@@ -130,7 +130,7 @@
             </div>
             <div class="col mb-4 d-flex align-items-stretch">
               <div class="card text-light bg-dark" data-aos="fade-in">
-                <img src="./assets/api-2.png" class="card-img-top" alt="API Project 2">
+                <img src="./assets/api2.png" class="card-img-top" alt="API Project 2">
                 <div class="card-body">
                     <a href="https://jml-randomphotogenerator.web.app/" target="blank">
                   <h5 class="card-title">API Project 2
@@ -204,14 +204,14 @@
             <div class="column" style="list-style-type: none;">
                     <a href="https://www.linkedin.com/in/joshlane3/" target="blank">
                         <div class="linkedinImage">
-                            <img src="./assets/linkedin logo.png" height = 42.42 width = 42.42 alt="LinkedIn logo">
+                            <img src="./assets/linkedinLogo.png" height = 42.42 width = 42.42 alt="LinkedIn logo">
                         </div>
                     </a>
             </div>
             <div class="column">
                     <a href="https://github.com/lanejm" target="blank">
                         <div class="githubImage">
-                            <img src="./assets/github logo.png" height = 42.42 width = 42.42 alt="Github logo">
+                            <img src="./assets/githubLogo.png" height = 42.42 width = 42.42 alt="Github logo">
                         </div>
                     </a>
             </div> 
