added blue badge info

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                     <a href="https://lanejm.github.io/api1-project/" target="blank">
                   <h5 class="card-title">COVID-19 Cases API  
                     </a>
+                </br>
                     <i class="fab fa-js-square"></i> <i class="fab fa-html5"></i> <i class="fab fa-css3-alt"></i> </h5>
                   <p class="card-text">Developed an API by using Javascript and DOM Manipulation.  This API shows up to date confirmed COVID-19 cases in Germany.</p>
                 </div>
@@ -135,6 +136,7 @@
                     <a href="https://jml-randomphotogenerator.web.app/" target="blank">
                   <h5 class="card-title">API Project 2
                   </a>
+                </br>
                   <i class="fab fa-js-square"></i> <i class="fab fa-html5"></i> <i class="fab fa-css3-alt"></i></h5>
                   <p class="card-text">Choosing an image is tough, have this API do it for you! Utilizing Javascript and DOM Manipulation, I created a random image generator! This project was deployed to Firebase!</p>
                 </div>
@@ -142,19 +144,23 @@
             </div>
             <div class="col mb-4 d-flex align-items-stretch">
                 <div class="card text-light bg-dark" data-aos="fade-in">
-                  <img src="..." class="card-img-top" alt="...">
+                  <img src="./assets/blueBadgeProject.png" class="card-img-top" alt="Blue Badge Project">
                   <div class="card-body">
-                    <h5 class="card-title">TBD</h5>
-                    <p class="card-text">This project is coming soon...I'm sure it'll be awesome!</p>
+                        <a href="http://troute.herokuapp.com/" target="blank">
+                    <h5 class="card-title">Eleven Fifty Academy Blue Badge Project
+                    </a>
+                </br>
+                    <i class="fab fa-js-square"></i> <i class="fab fa-html5"></i> <i class="fab fa-css3-alt"></i> <i class="fab fa-node-js"></i></h5>
+                    <p class="card-text">Worked with a group of fellow developers to build a full-stack application.  I made the application mobile friendly and it has been deployed through Heroku! </p>
                   </div>
                 </div>
               </div>
               <div class="col mb-4 d-flex align-items-stretch">
                 <div class="card text-light bg-dark" data-aos="fade-in">
-                  <img src="..." class="card-img-top" alt="...">
+                  <!-- <img src="..." class="card-img-top" alt="..."> -->
                   <div class="card-body">
-                    <h5 class="card-title">TBD</h5>
-                    <p class="card-text">This project is coming soon...I'm sure it'll be awesome!</p>
+                    <h5 class="card-title">Eleven Fifty Academy Red Badge Project</h5>
+                    <p class="card-text">This project is still being developed but will be completed the first week of February 2021!</p>
                   </div>
                 </div>
               </div>
@@ -165,7 +171,7 @@
     <section id="resume" class="section-padding" data-aos="fade-in">
         <div class="container4 text-center">
             <h4>Interested in learning more about me?</h4>
-            <a href="https://drive.google.com/file/d/1zSWiWFWKBTnIl1VML7aQEL89p0escjnT/view?usp=sharing" class ="btn btn-dark">Download Resume</a>
+            <a href="https://drive.google.com/file/d/1NJZ-NiPqxvwUNmr-17IVr5v9uh0efnL-/view?usp=sharing" class ="btn btn-dark">Download Resume</a>
         </div>
     </section>
     <!--End Resume Section-->
