added red badge project

--- a/index.html
+++ b/index.html
@@ -157,10 +157,14 @@
               </div>
               <div class="col mb-4 d-flex align-items-stretch">
                 <div class="card text-light bg-dark" data-aos="fade-in">
-                  <!-- <img src="..." class="card-img-top" alt="..."> -->
+                  <img src="./assets/redBadgeProject.png" class="card-img-top" alt="Red Badge Project">
                   <div class="card-body">
-                    <h5 class="card-title">Eleven Fifty Academy Red Badge Project</h5>
-                    <p class="card-text">This project is still being developed but will be completed the first week of February 2021!</p>
+                        <a href="https://jml-gift-tag.herokuapp.com/" target="blank">
+                    <h5 class="card-title">Eleven Fifty Academy Red Badge Project
+                    </a>
+                </br>
+                <i class="fab fa-js-square"></i> <i class="fab fa-html5"></i> <i class="fab fa-css3-alt"></i> <i class="fab fa-node-js"></i></h5>
+                    <p class="card-text">Developed a full-stack application that utilized TypeScript, Node.js, ReactStrap and Heroku.</p>
                   </div>
                 </div>
               </div>
