added new projects, updated resume, formatting

--- a/index.html
+++ b/index.html
@@ -88,37 +88,13 @@
             <div class="row">
                 <div class="col">
                     <h1 class="display-6" style="text-align: center;">Portfolio</h1>
-                    <p>I am currently enrolled in the Web Development Course at <a class="fiftylink" href="https://elevenfifty.org/" target="blank">ElevenFifty Academy</a>. Here are some examples of my work. <p>
+                    <p>I am a recent graduate of the Web Development Course at <a class="fiftylink" href="https://elevenfifty.org/" target="blank">ElevenFifty Academy</a>. Here are some examples of my work. <p>
                 </div>
             </div>
         <div class="row row-cols-1 row-cols-md-3" data-aos="fade-in">
             <div class="col mb-4 d-flex align-items-stretch">
-              <div class="card text-light bg-dark">
-                <img src="./assets/kastHomescreen.png" class="card-img-top" alt="Kast-homescreen">
-                <div class="card-body">
-                    <a href="https://lanejm.github.io/static.layout.assignment/" target="blank">
-                  <h5 class="card-title">Static Layout Application
-                    </a> 
-                <i class="fab fa-html5"></i> <i class="fab fa-css3-alt"></i></h5>
-                  <p class="card-text">Utilized HTML and CSS to clone a website.  This was my first project and a great introduction to coding! </p>
-                </div>
-              </div>
-            </div>
-            <div class="col mb-4 d-flex align-items-stretch">
               <div class="card text-light bg-dark" data-aos="fade-in">
-                <img src="./assets/creatureAssignment.png" class="card-img-top" alt="Snowman">
-                <div class="card-body">
-                    <a href="https://codepen.io/lanejm/pen/GRZojXr" target="blank">
-                  <h5 class="card-title">CSS Creature 
-                    </a>
-                    <i class="fab fa-css3-alt"></i></h5>
-                  <p class="card-text">Utilized only CSS to create a fun snowman! Brr! </p>
-                </div>
-              </div>
-            </div>
-            <div class="col mb-4 d-flex align-items-stretch">
-              <div class="card text-light bg-dark" data-aos="fade-in">
-                <img src="./assets/api1.png" class="card-img-top" alt="API Project 1">
+                <img src="./assets/api1.png" height="250" width="196" class="card-img-top" alt="API Project 1">
                 <div class="card-body">
                     <a href="https://lanejm.github.io/api1-project/" target="blank">
                   <h5 class="card-title">COVID-19 Cases API  
@@ -131,7 +107,7 @@
             </div>
             <div class="col mb-4 d-flex align-items-stretch">
               <div class="card text-light bg-dark" data-aos="fade-in">
-                <img src="./assets/api2.png" class="card-img-top" alt="API Project 2">
+                <img src="./assets/api2.png" height="250" width="196" class="card-img-top" alt="API Project 2">
                 <div class="card-body">
                     <a href="https://jml-randomphotogenerator.web.app/" target="blank">
                   <h5 class="card-title">API Project 2
@@ -144,7 +120,7 @@
             </div>
             <div class="col mb-4 d-flex align-items-stretch">
                 <div class="card text-light bg-dark" data-aos="fade-in">
-                  <img src="./assets/blueBadgeProject.png" class="card-img-top" alt="Blue Badge Project">
+                  <img src="./assets/blueBadgeProject.png" height="250" width="196" class="card-img-top" alt="Blue Badge Project">
                   <div class="card-body">
                         <a href="http://troute.herokuapp.com/" target="blank">
                     <h5 class="card-title">Eleven Fifty Academy Blue Badge Project
@@ -157,7 +133,7 @@
               </div>
               <div class="col mb-4 d-flex align-items-stretch">
                 <div class="card text-light bg-dark" data-aos="fade-in">
-                  <img src="./assets/redBadgeProject.png" class="card-img-top" alt="Red Badge Project">
+                  <img src="./assets/redBadgeProject.png" height="250" width="196" class="card-img-top" alt="Red Badge Project">
                   <div class="card-body">
                         <a href="https://jml-gift-tag.herokuapp.com/" target="blank">
                     <h5 class="card-title">Eleven Fifty Academy Red Badge Project
@@ -168,14 +144,53 @@
                   </div>
                 </div>
               </div>
+              <div class="col mb-4 d-flex align-items-stretch">
+                <div class="card text-light bg-dark" data-aos="fade-in">
+                  <img src="./assets/sprechen.png" height="250" width="196" class="card-img-top" alt="Sprechen Chat App">
+                  <div class="card-body">
+                      <a href="https://sprechen.netlify.app/" target="blank">
+                    <h5 class="card-title">Messaging Application
+                      </a> 
+                    </h5>
+                    <p class="card-text">Developed a messaging application that allows users to sign in via Google.  This project utilizes Firebase and was deployed on Netlify. </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col mb-4 d-flex align-items-stretch">
+                <div class="card text-light bg-dark" data-aos="fade-in">
+                  <img src="./assets/instaclone.png" height="250" width="196" class="card-img-top" alt="Social Media Clone">
+                  <div class="card-body">
+                      <a href="https://jml-instaclone.netlify.app/login" target="blank">
+                    <h5 class="card-title">Social Media Website Clone
+                      </a>
+                    <p class="card-text">This project is a clone of Instagram with full functionality! It was styled using Tailwind CSS.  Firebase was utilized for database management and it was deployed on Netlify. </p>
+                  </div>
+                </div>
+              </div>
           </div>
-    </section>
-<br>  
+    </section> 
+    <br>
+   <!--Start tech stack-->
+   <section id="techStack">
+    <div class="container4 text-center" data-aos="fade-in">
+        <div class="row">
+            <div class="col">
+                <h1 class="display-6" style="align-items: center;">Technical Skills</h1>
+                    <p>Languages: JavaScript, Node.JS, React, Heroku, Firebase, TypeScript</p>
+                    <p>Web Technologies: HTML, CSS, APIs, stateless components, session validation, responsive web design</p>
+            </div>
+        </div>
+    </div>
+</section>
+<!--End tech stack-->
+<br>
+<br>
+
     <!--Resume Section-->    
     <section id="resume" class="section-padding" data-aos="fade-in">
-        <div class="container4 text-center">
+        <div class="container5 text-center">
             <h4>Interested in learning more about me?</h4>
-            <a href="https://drive.google.com/file/d/1NJZ-NiPqxvwUNmr-17IVr5v9uh0efnL-/view?usp=sharing" class ="btn btn-dark">Download Resume</a>
+            <a href="https://drive.google.com/file/d/1cD1oXGEf_svXUYZKXMXycozVMPa0h6hv/view?usp=sharing" class ="btn btn-dark">Download Resume</a>
         </div>
     </section>
     <!--End Resume Section-->
