--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 				<!-- Main -->
 					<div id="main">
 
-<<<<<<< HEAD
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
@@ -112,7 +111,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="https://formspree.io/joshlane3@gmail.com">
+								<form method="post" action="https://formspree.io/f/joshlane3@gmail.com">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -404,6 +403,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/main.js"></script>
 
 	</body>
-=======
->>>>>>> da755a3ea1368a469cc58f53f6069a1263ebf91a
 </html>
