removed legacy formspree form

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="POST" action="https://formspree.io/joshlane3@gmail.com">
+								<form method="POST" action="https://formspree.io/f/xyylkgav">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
