--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Joshua Lane</title>
 		<meta charset="utf-8" />
 		<meta name="image" property="og:image" content="https://lanejm.com/images/personalLogoSquare.png">
+		<meta name="author" content="Joshua Lane">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="icon" type="image/png" href="images/personalLogoSquare.png" />
 		<link rel="stylesheet" href="assets/css/main.css" />
