added gwa to work, added tech stacks to projects, added resume link to intro section

--- a/index.html
+++ b/index.html
@@ -52,12 +52,24 @@
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/profilePic.jpeg" alt="josh" /></span>
 								<p>Thank you for taking the time to get to know me more. I've been a humble public servant since 2013 working in management of the parks and recreation department of a large municipality.  I’m very interested in making processes and programs more efficient and am interested in how I can use coding to save time and money and to improve systems. </p>
-								<p>I am an Eleven Fifty Academy alum that is skilled in JavaScript, React, TypeScript, SQL, HTML, CSS, Node.js, APIs, Git, and responsive web design. Check out my <a href="#work">awesome work</a> and feel free to reach out!.</p>
+								<p>I am an Eleven Fifty Academy alum that is skilled in JavaScript, React, TypeScript, SQL, HTML, CSS, Node.js, APIs, Git, and responsive web design. You can view my <a href="#work">awesome work</a> or <a href="https://drive.google.com/file/d/1P-a0tHGqPoihA1pYVicD5_lLiaT6Eg55/view?usp=sharing" target="_blank">download my resume.</a> Feel free to reach out!.</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
+								<span class="image main">
+									<img src="images/gwapreview1.png" alt="Apartment Complex Project">
+								<figcaption>
+									Glendale Woods Apartments (
+									<a href="https://github.com/lanejm/gwa-website" target="_blank">Github</a>
+									/
+									<a href="https://glendalewoods.netlify.app/home" target="_blank">Demo</a>
+									)
+									<br>JavaScript | React | Google Maps API | Netlify | Bulma CSS | SASS
+								</figcaption></span>
+								<p>I developed this website for an apartment complex in Indianapolis. This project utilizes Bulma CSS and React. I learned how to use React Slider and Google Maps API during this project! </p>
+								<hr>
 								<span class="image main">
 									<img src="images/instaclone.png" alt="Instaclone Project">
 								<figcaption>
@@ -66,8 +78,10 @@
 									/
 									<a href="https://jml-instaclone.netlify.app/login" target="_blank">Demo</a>
 									)
+									<br>JavaScript | React | HTML | Tailwind CSS
 								</figcaption></span>
 								<p>This project is a clone of Instagram with full functionality! It was built with React and styled using Tailwind CSS. Firebase was utilized for database management and it was deployed on Netlify.</p>
+								<p>To view functionality you can log in under dwight@dundermifflin.com with password BeetsBeets.</p>
 							<hr>
 							<span class="image main">
 								<img src="images/sprechen.png" alt="Sprechen Project">
@@ -77,8 +91,9 @@
 								/
 								<a href="https://sprechen.netlify.app/" target="_blank">Demo</a>
 								)
+								<br>JavaScript | React | Firebase | Tailwind CSS | 
 							</figcaption></span>
-							<p>Developed a messaging application that allows users to sign in via Google. This project utilizes Firebase and was deployed on Netlify.</p>
+							<p>Developed a messaging application with React that allows users to sign in via Google. This project utilizes Firebase and was deployed on Netlify.</p>
 							<hr>
 							<span class="image main">
 								<img src="images/giftTag.png" alt="Red Badge Project">
@@ -87,21 +102,23 @@
 								<a href="https://github.com/lanejm/red-badge" target="_blank">Github</a>
 								/
 								<a href="https://jml-gift-tag.herokuapp.com/" target="_blank">Demo</a>
-								)
+								) 
+								<br>Node.js | TypeScript | PostgresSQL | Heroku
 							</figcaption></span>
-							<p>GiftTag was created as my final project at Eleven Fifty Academy.  I developed this full stack application and it utilizes TypeScript and backend is managed via Node.js and Postgres SQL.</p>
-							<p>This app was developed because I couldn't remember what gifts I received from whom.  This allows me to keep track all in one place and search by gift/holiday.</p>
+							<p>GiftTag was created as my final project at Eleven Fifty Academy.  I developed this CRUD web application and it utilizes TypeScript and backend is managed via Node.js and Postgres SQL.</p>
+							<p>This app was developed because I couldn't remember what gifts I received from whom.  This allows me to keep track all in one place and search by gift/holiday. Once logged in, users can search for gifts based on gift name, add, edit, or delete gifts/holidays.</p>
 							<hr>
 							<span class="image main">
 								<img src="images/randomImageGenerator.png" alt="API Project 2">
 							<figcaption>
-								API2 (
+								Random Image Generator (
 								<a href="https://github.com/lanejm/api-2" target="_blank">Github</a>
 								/
 								<a href="https://jml-randomphotogenerator.web.app/" target="_blank">Demo</a>
-								)
+								) 
+								<br>JavaScript | API | HTML | CSS | Bootstrap
 							</figcaption></span>
-							<p>Choosing an image is tough, have this API do it for you! Utilizing Javascript and DOM Manipulation, I created a random image generator! This project was deployed to Firebase! </p>
+							<p>Choosing an image is tough, have this random image generator do it for you! Utilizing Javascript and DOM Manipulation, this application fetches data from the Unsplash API and displays it on the screen. This project was deployed to Firebase! </p>
 							</article>
 
 						<!-- About -->
@@ -141,7 +158,7 @@
 								</ul>
 							</article>
 
-						<!-- Elements -->
+						<!--Elements-->
 							<article id="elements">
 								<h2 class="major">Elements</h2>
 
