--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<title>Joshua Lane</title>
 		<meta charset="utf-8" />
-		<meta name="description" content="Frontend Web Developer based in Indianapolis, IN">
+		<meta name="description" content="Joshua Lane - Frontend Web Developer based in Indianapolis, IN">
 		<meta name="keywords" content="Joshua Lane, developer, React, JavaScript, HTML">
 		<meta name="image" property="og:image" content="https://lanejm.com/images/personalLogoSquare.png">
 		<meta name="author" content="Joshua Lane">
