updated work section tag to featured projects

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 								<p>I am an Eleven Fifty Academy alum that is skilled in JavaScript, React, TypeScript, SQL, HTML, CSS, Node.js, APIs, Git, and responsive web design. You can view my <a href="#work">awesome work</a> or <a href="https://drive.google.com/file/d/1OhLZUjToFAQyLgSvpiFIzTrCLdA6_GE4/view?usp=sharing" target="_blank">download my resume.</a> Feel free to reach out!.</p>
 							</article>
 
-						<!-- Work -->
+						<!-- Featured Projects -->
 							<article id="work">
-								<h2 class="major">Work</h2>
+								<h2 class="major">Featured Projects</h2>
 								<span class="image main">
 									<img src="images/gwapreview1.png" alt="Apartment Complex Project">
 								<figcaption>
