--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Joshua Lane</h1>
-								<p>Hello! I'm Joshua! I'm a junior web developer looking to utilize my eagerness to learn, 
+								<p>Hello! I'm Joshua! I'm a web developer looking to utilize my eagerness to learn, 
 									<br>
 									passion for coding, and problem solving to transition into the tech industry. Welcome! </p>
 							</div>
