added snake game to portfolio

--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
 								<p>I developed this website for an apartment complex in Indianapolis. This project utilizes Bulma CSS and React. I learned how to use React Slider and Google Maps API during this project! </p>
 								<hr>
 								<span class="image main">
+									<img src="images/snake.png" alt="Snake Game">
+								<figcaption>
+									Snake Game (
+									<a href="https://github.com/lanejm/scrimba/tree/main/snake" target="_blank">Github</a>
+									/
+									<a href="https://jml-snake.netlify.app/" target="_blank">Demo</a>
+									)
+									<br>JavaScript | Netlify | CSS | HTML
+								</figcaption></span>
+								<p>I developed this classic snake game as part of the <a href="https://www.scrimba.com">Scrimba</a> frontend career path. This game utilizes JavaScript to allow for interactivity.  My current high score is 13!</p>
+								<hr>
+								<span class="image main">
 									<img src="images/instaclone.png" alt="Instaclone Project">
 								<figcaption>
 									Instaclone (
@@ -80,7 +92,7 @@
 									)
 									<br>JavaScript | React | HTML | Tailwind CSS
 								</figcaption></span>
-								<p>This project is a clone of Instagram with full functionality! It was built with React and styled using Tailwind CSS. Firebase was utilized for database management and it was deployed on Netlify.</p>
+								<p>This project is a clone of Instagram with full functionality! It was built with React and styled using Tailwind CSS. Firebase was utilized for database management and it was deployed on Netlify. This is like Instagram but without ads, so better!</p>
 								<p>To view functionality you can log in under dwight@dundermifflin.com with password BeetsBeets.</p>
 							<hr>
 							<span class="image main">
