removed giftag as no longer supported by herkou

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 							</figcaption></span>
 							<p>Developed a messaging application with React that allows users to sign in via Google. This project utilizes Firebase and was deployed on Netlify.</p>
 							<hr>
+						<!-- No longer supported by heroku
 							<span class="image main">
 								<img src="images/giftTag.png" alt="Red Badge Project">
 							<figcaption>
@@ -119,6 +120,7 @@
 							</figcaption></span>
 							<p>GiftTag was created as my final project at Eleven Fifty Academy.  I developed this CRUD web application and it utilizes TypeScript and backend is managed via Node.js and Postgres SQL.</p>
 							<p>This app was developed because I couldn't remember what gifts I received from whom.  This allows me to keep track all in one place and search by gift/holiday. Once logged in, users can search for gifts based on gift name, add, edit, or delete gifts/holidays.</p>
+						-->
 							<hr>
 							<span class="image main">
 								<img src="images/randomImageGenerator.png" alt="API Project 2">
