added gwa image

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<article id="work">
 								<h2 class="major">Featured Projects</h2>
 								<span class="image main">
-									<img src="images/gwapreview1.png" alt="Apartment Complex Project">
+									<img src="images/preview1GWA.png" alt="Apartment Complex Project">
 								<figcaption>
 									Glendale Woods Apartments (
 									<a href="https://github.com/lanejm/gwa-website" target="_blank">Github</a>
