added caterhood to projects

--- a/index.html
+++ b/index.html
@@ -59,6 +59,18 @@
 							<article id="work">
 								<h2 class="major">Featured Projects</h2>
 								<span class="image main">
+									<img src="images/caterhoodPreview.png" alt="Caterhood">
+								<figcaption>
+									Caterhood (
+									<a href="https://github.com/lanejm/caterhood" target="_blank">Github</a>
+									/
+									<a href="https://caterhood.netlify.app" target="_blank">Demo</a>
+									)
+									<br>JavaScript | Netlify | Geolocation | Data Storage | Leaflet
+								</figcaption></span>
+								<p>My wife and I always try to see who can see the most cats when we go for walks in places. We now have a way to keep track of our findings! This Javascript app uses the user's geolocation to populate the map. Any found cats are stored in the list. Click on a cat from the list to zoom into it on the map.</p>
+								<hr>
+								<span class="image main">
 									<img src="images/preview1GWA.png" alt="Apartment Complex Project">
 								<figcaption>
 									Glendale Woods Apartments (
