--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             responsive web design. You can view my
             <a href="#work">awesome work</a> or
             <a
-              href="https://docs.google.com/document/d/1cD1oXGEf_svXUYZKXMXycozVMPa0h6hv/edit?usp=sharing&ouid=102580783925652691948&rtpof=true&sd=true"
+              href="https://drive.google.com/file/d/1VlszsK25FGqbrgAgj8PnXEuNNH834eIR/view?usp=sharing"
               target="_blank"
               >download my resume.</a
             >
