--- a/index.html
+++ b/index.html
@@ -70,17 +70,15 @@
             ><img src="images/profilePic.jpeg" alt="josh"
           /></span>
           <p>
-            Thank you for taking the time to get to know me more. I've been a
-            humble public servant since 2013 working in management of the parks
-            and recreation department of a large municipality. I’m very
+            Thank you for taking the time to get to know me more. I’m very
             interested in making processes and programs more efficient and am
-            interested in how I can use coding to save time and money and to
+            interested in how I can use coding to save time, money, and to
             improve systems.
           </p>
           <p>
-            I am an Eleven Fifty Academy alum that is skilled in JavaScript,
-            React, TypeScript, SQL, HTML, CSS, Node.js, APIs, Git, and
-            responsive web design. You can view my
+            I am an developer that is skilled in JavaScript, React, Next.js,
+            TypeScript, SQL, HTML, CSS, Node.js, APIs, Git, and responsive web
+            design. You can view my
             <a href="#work">awesome work</a> or
             <a
               href="https://drive.google.com/file/d/1VlszsK25FGqbrgAgj8PnXEuNNH834eIR/view?usp=sharing"
