updated with property pulse app

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             design. You can view my
             <a href="#work">awesome work</a> or
             <a
-              href="https://drive.google.com/file/d/1VlszsK25FGqbrgAgj8PnXEuNNH834eIR/view?usp=sharing"
+              href="https://drive.google.com/file/d/1ygsa1zDYpmYLWFeatNl44bgYQbmSFDp3/view?usp=sharing"
               target="_blank"
               >download my resume.</a
             >
@@ -93,6 +93,21 @@
         <article id="work">
           <h2 class="major">Featured Projects</h2>
           <span class="image main">
+            <img src="images/propertyPulse.png" alt="Property Pulse" />
+            <figcaption>
+              Property Pulse Rental Website (
+              <a href="https://github.com/lanejm/property-pulse-nextjs" target="_blank"
+                >Github</a
+              >
+              /
+              <a href="https://property-pulse-nextjs-ashy.vercel.app/" target="_blank">Demo</a>
+              )
+              <br />JavaScript | CRUD | Next.js | MongoDB | Mapbox | 
+            </figcaption></span
+          >
+          <p>
+            This site was developed in order to learn Next.js. It has full CRUD functionality and many more features including, messaging, authentication, authorization via Google, bookmarking, share to socials, contact form, map, images with lightbox. Feel 
+          </p>
             <img src="images/caterhoodPreview.png" alt="Caterhood" />
             <figcaption>
               Caterhood (
