--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </figcaption></span
           >
           <p>
-            This site was developed in order to learn Next.js. It has full CRUD functionality and many more features including, messaging, authentication, authorization via Google, bookmarking, share to socials, contact form, map, images with lightbox. Feel 
+            This site was developed in order to learn Next.js. It has full CRUD functionality and many more features including, messaging, authentication, authorization via Google, bookmarking, share to socials, contact form, map, images with lightbox.
           </p>
             <img src="images/caterhoodPreview.png" alt="Caterhood" />
             <figcaption>
