fixed caterhood image

--- a/index.html
+++ b/index.html
@@ -96,18 +96,28 @@
             <img src="images/propertyPulse.png" alt="Property Pulse" />
             <figcaption>
               Property Pulse Rental Website (
-              <a href="https://github.com/lanejm/property-pulse-nextjs" target="_blank"
+              <a
+                href="https://github.com/lanejm/property-pulse-nextjs"
+                target="_blank"
                 >Github</a
               >
               /
-              <a href="https://property-pulse-nextjs-ashy.vercel.app/" target="_blank">Demo</a>
+              <a
+                href="https://property-pulse-nextjs-ashy.vercel.app/"
+                target="_blank"
+                >Demo</a
+              >
               )
-              <br />JavaScript | CRUD | Next.js | MongoDB | Mapbox | 
+              <br />JavaScript | CRUD | Next.js | MongoDB | Mapbox |
             </figcaption></span
           >
           <p>
-            This site was developed in order to learn Next.js. It has full CRUD functionality and many more features including, messaging, authentication, authorization via Google, bookmarking, share to socials, contact form, map, images with lightbox.
+            This site was developed in order to learn Next.js. It has full CRUD
+            functionality and many more features including, messaging,
+            authentication, authorization via Google, bookmarking, share to
+            socials, contact form, map, images with lightbox.
           </p>
+          <span class="image main">
             <img src="images/caterhoodPreview.png" alt="Caterhood" />
             <figcaption>
               Caterhood (
@@ -118,8 +128,8 @@
               <a href="https://caterhood.netlify.app" target="_blank">Demo</a>
               )
               <br />JavaScript | Netlify | Geolocation | Data Storage | Leaflet
-            </figcaption></span
-          >
+            </figcaption>
+          </span>
           <p>
             My wife and I always try to see who can see the most cats when we go
             for walks in places. We now have a way to keep track of our
